# gaming-experiments

./: .gitignore  Level.cpp  Level.hpp  Player.cpp  Player.hpp  README.md  RcDemo.cpp  Render.cpp  Render.hpp  main.cpp
demos/pong/: CMakeLists.txt
demos/pong/src/: Ball.hpp  Console.cpp  Console.hpp  Game.cpp  Game.hpp  Goal.cpp  Input.cpp  Input.hpp  MainFrame.cpp  MainFrame.hpp  Player.cpp  Player.hpp  Pong.cpp  Pong.hpp  Renderer.hpp  SwRenderer.cpp  SwRenderer.hpp  main.cpp
demos/raycasting_1/: CMakeLists.txt  main.lua  mainloop.lua  player.lua  raycasting.lua  renderer.lua  world.lua
demos/raycasting_1/src/: ClRenderer.cpp  ClRenderer.hpp  Input.cpp  Input.hpp  Level.cpp  Level.hpp  LuaHelper.cpp  LuaHelper.hpp  LuaInstanceMap.hpp  LuaInterpreter.cpp  LuaInterpreter.hpp  MainFrame.cpp  MainLoop.cpp  MainLoop.hpp  MainLoopAPI.cpp  Player.cpp  Player.hpp  PlayerAPI.cpp  Ray.hpp  RcDemo.cpp  RcDemo.hpp  Renderer.cpp  Renderer.hpp  SwRenderer.cpp  SwRenderer.hpp  Utils.hpp  World.cpp  World.hpp  WorldAPI.cpp  kernel_params.hpp  main.cpp
demos/raycasting_1/src/render/: NullRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  ResourceCache.cpp  ResourceCache.hpp
demos/raycasting_1/src/render/cl/: ClRenderer.cpp  ClRenderer.hpp  TexClRenderer.cpp  TexClRenderer.hpp  cl_renderer.cl  cl_tex_renderer.cl  kernel_params.hpp
demos/raycasting_1/src/render/sw/: ResourceCache.hpp  Slice.hpp  SvgSwRenderer.cpp  SvgSwRenderer.hpp  SwRenderer.cpp  SwRenderer.hpp  SwRendererMt.cpp  SwRendererMt.hpp  TexSwRenderer.cpp  TexSwRenderer.hpp
demos/raycasting_2/: CMakeLists.txt
demos/raycasting_2/CMake/Modules/: FindSDL_gfx.cmake
demos/raycasting_2/cl/: kernel.cl
demos/raycasting_2/src/: ClRenderer.cpp  ClRenderer.hpp  Level.hpp  MtSwRenderer.cpp  MtSwRenderer.hpp  Player.cpp  RcDemo.cpp  RcDemo.hpp  Slice.cpp  SwRenderer.cpp  SwRenderer.hpp  kernel_params.hpp
lib/SDL2_gfx-1.0.0/lib/x64/: SDL2_gfx.lib
lib/SDL2_gfx-1.0.0/lib/x86/: SDL2_gfx.lib
lib/lua-5.2.3/src/: lua.c  luac.c
lib/sdlconsole-2.1/docs/: index.html
lib/sdlconsole-2.1/include/: SDL_console.h
lib/sdlconsole-2.1/src/: DT_drawtext.c  SDL_console.c
old-raycast-experiments/: README.txt
old-raycast-experiments/rc_demo_1/: CMakeLists.txt  ClRenderer.hpp  Input.cpp  RcDemo.cpp  SwRenderer.cpp  kernel_params.hpp
old-raycast-experiments/rc_demo_2/: CMakeLists.txt
old-raycast-experiments/rc_demo_2/CMake/Modules/: FindSDL_gfx.cmake
old-raycast-experiments/rc_demo_2/src/: ClRenderer.cpp  ClRenderer.hpp  MainFrame.cpp  Player.cpp  RcDemo.cpp  Utils.hpp
pong/src/: Ball.cpp  Field.cpp  Field.hpp  Goal.hpp  Input.hpp  Player.cpp  Pong.cpp  Renderer.hpp  SwRenderer.cpp  SwRenderer.hpp
rc_demo_1/: CMakeLists.txt  ClRenderer.cpp  ClRenderer.hpp  Input.hpp  Level.cpp  Level.hpp  MainFrame.hpp  Player.cpp  Player.hpp  RcDemo.cpp  RcDemo.hpp  Render.cpp  Render.hpp  SwRenderer.cpp  SwRenderer.hpp  kernel.cl
rc_demo_2/: CMakeLists.txt  Level.cpp  Level.hpp  MainFrame.hpp  Player.cpp  Player.hpp  Ray.cpp  RcDemo.cpp  Render.cpp  Render.hpp  ResourceCache.cpp  ResourceCache.hpp  Slice.cpp  Slice.hpp  Utils.hpp
rc_demo_2/src/: Level.cpp  Level.hpp  MainFrame.cpp  Player.cpp  Player.hpp  Ray.cpp  Ray.hpp  RcDemo.cpp  RcDemo.hpp  Render.cpp  Render.hpp  Renderer.hpp  ResourceCache.cpp  ResourceCache.hpp  Slice.cpp  Slice.hpp  SwRenderer.cpp  SwRenderer.hpp  kernel_params.hpp  main.cpp
