CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(pong)

IF (NOT CMAKE_BUILD_TYPE)
    MESSAGE(STATUS "No build type selected. Default to Debug")
    SET(CMAKE_BUILD_TYPE "Debug")
ENDIF()

ADD_DEFINITIONS(-Wall)
SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")

FIND_PACKAGE(SDL REQUIRED)

INCLUDE_DIRECTORIES(
   ${SDL_INCLUDE_DIR}
)

FILE(GLOB PRJ_HDR src/*.hpp)
FILE(GLOB PRJ_SRC src/*.cpp)

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${PRJ_HDR} ${PRJ_SRC}
)

TARGET_LINK_LIBRARIES(
   ${PROJECT_NAME}
   ${SDL_LIBRARY}
)
