CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(pong)

IF (NOT CMAKE_BUILD_TYPE)
    MESSAGE(STATUS "No build type selected. Default to Debug")
    SET(CMAKE_BUILD_TYPE "Debug")
ENDIF()

ADD_DEFINITIONS(-Wall)
SET(CMAKE_CXX_FLAGS "-std=c++11")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")

SET(SDL_CONSOLE_DIR ../../lib/sdlconsole-2.1)

FIND_PACKAGE(SDL REQUIRED)

INCLUDE_DIRECTORIES(
    ${SDL_INCLUDE_DIR}
    ${SDL_CONSOLE_DIR}/include
)

FILE(GLOB PRJ_HDR src/*.hpp)
FILE(GLOB PRJ_SRC src/*.cpp)

FILE(GLOB SDL_CONSOLE_HDR ${SDL_CONSOLE_DIR}/include/*.h)
FILE(GLOB SDL_CONSOLE_SRC ${SDL_CONSOLE_DIR}/src/*.c)

ADD_EXECUTABLE(
    ${PROJECT_NAME}
    ${PRJ_HDR} ${PRJ_SRC}
    ${SDL_CONSOLE_HDR} ${SDL_CONSOLE_SRC}
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${SDL_LIBRARY}
)

CONFIGURE_FILE(res/font.bmp font.bmp COPYONLY)
