CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(raycasting_1)

IF(NOT CMAKE_BUILD_TYPE)
    MESSAGE(STATUS "No build type selected. Default to Debug")
    SET(CMAKE_BUILD_TYPE "Debug")
ENDIF()

OPTION(WITH_OPENCL "Enable OpenCL option for rendering." OFF)

ADD_DEFINITIONS(-Wall)

IF (WIN32)
    SET(SDL2_INCLUDE_DIRS ${SDL2_INCLUDE_DIRS} ../../lib/SDL2-2.0.1/include)
    
    LINK_DIRECTORIES(../../lib/SDL2-2.0.1/lib/x86)
    SET(SDL2_LIBRARIES ${SDL2_LIBRARIES} SDL2.lib)
    FILE(COPY ../../lib/SDL2-2.0.1/lib/x86/SDL2.dll DESTINATION "${CMAKE_BINARY_DIR}")
ELSE()
    INCLUDE(FindPkgConfig)
    PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)

    SET(CMAKE_CXX_FLAGS "-std=c++11")
    SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3")
ENDIF()

INCLUDE_DIRECTORIES(
    ${SDL2_INCLUDE_DIRS}
)

FILE(GLOB PRJ_HDR src/*.hpp)
FILE(GLOB PRJ_SRC src/*.cpp)
FILE(GLOB PRJ_OCL cl/kernel.cl)

IF(WITH_OPENCL)
    MESSAGE(STATUS "Using OpenCL.")

    FILE(COPY "${PRJ_OCL}" DESTINATION "${CMAKE_BINARY_DIR}")

    ADD_DEFINITIONS(-DWITH_OPENCL)
    SET(EXTRA_LIBS ${EXTRA_LIBS} OpenCL)
ELSE()
    MESSAGE(STATUS "Not using OpenCL.")
ENDIF()

ADD_EXECUTABLE(${PROJECT_NAME} ${PRJ_HDR} ${PRJ_SRC} ${PRJ_OCL})

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    ${SDL2_LIBRARIES}
    ${EXTRA_LIBS}
)
